# cppwork

./: .gitignore  ABI.md  AggregateTypes.md  Aliases.md  Attributes.md  CLang.md  Cmake.md  CompilationModel.md  ConstGuidelines.md  Constructors.md  CrossCompilation.md  EnumsAndTypealias.md  ErrorHandling.md  ExternalLinkage.md  FriendClass.md  FriendFunction.md  FunctionTemplates.md  GoogleTest.md  HeaderFiles.md  HeaderGuidance.md  Implicitconversions.md  ImportantUtilsCommands.md  Inheritance.md  InputOutput.md  Interfaces.md  InternalLinkage.md  Macros.md  Modules.md  Movesemantics.md  Namespaces.md  PThreads.md  RAII.md  README.md  ReferenceQualifiers.md  References.md  STLContainers.md  Scope.md  SmartPointers.md  SpecialMemberFunctions.md  StorageDurationAndLinkage.md  (+22 more)
BestPractices/: PassByValueAndMoveIdiom.md  PolymorphicBaseClassSpecialMemberFunctions.md  PolymorphismBestPractices.md  ResourceManagementWithUniquePointers.md  SingleArgumentExplicitConstructor.md  SpecialMemberFunctionMoveSemantics.md
BuildSystems/MSBuild/: README.md
Casting/: README.md
Cmake/: ADD_LIBRARY.md  Basics.md  BuildDirConventions.md  CMAKE_PREFIX_PATH.md  Cmake.md  CompileDefinitions.md  DependencyProvider.md  ExternalLibs.md  FetchContent.md  HeaderOnlyLibraries.md  Install.md  InterfaceLibrary.md  OSSpecificCOmpilation.md  PackageSystem.md  README.md  Toolchain.md  Variables.md  cmakecache.md  compilecommands.md  find_package.md  include.md  vendoring.md  visibility.md
Cmake/Testing/: TestDiscoveryAndRunningWithConan.md
Collections/: DefaultConstruction.md  Iteration.md  Range.md  StdArray.md  Vector.md
Collections/Map/: MapIteration.md  MapKeyOrdering.md
Collections/Vector/: VectorInit.md
Conan/: README.md  commands.md
Concurrency/: ABAproblem.md  Atomics.md  ConditionVariables.md  DataRaces.md  Deadlocks.md  LitmusTests.md  LockFreeProgramming.md  Locks.md  MemoryModel.md  Mutex.md  MutexTypes.md  Threads.md
Curiosity/: RefQualifierOverloads.md  WhyAssignmentOpsReturnReference.md
Debugging/: PrettyFunction.md
Gotchas/: InheritanceObjectSLicing.md  MoveSelfAssignment.md  MoveSemanticsBasedOnMemberSemantics.md  NoExceptForDestructorsAndMoveConstructors.md  OverloadResolution.md  ReadingConstErrors.md
Networking/: README.md
Pointers/: SharedPointers.md  WeakPointer.md
Polymorphism/: Destructors.md  virtual.md
Sanitizers/: AddressSanitizer.md
Testing/GoogleTest/: README.md
folly/: README.md
io/: ErrorHandling.md  README.md  common.md  fasterio.md  fileio.md  fstream.md  streambuf.md  stringstream.md
lambdas/: LambdasToFunctionPointers.md  lambdafunctions.md
langs/odata/: extract  extractkeywordsfromspec.cpp  lexer.cpp
learningprojs/autosample/: main.cpp
learningprojs/cpp23/: main.cpp
learningprojs/cppconcurrencyinaction/: CMakeLists.txt
learningprojs/cppmove/: CMakeLists.txt  Shapes.h  customer.h  main.cpp
learningprojs/inheritancechecks/: constructors.cpp  interfaces.cpp  main.cpp  virtualdestructors.cpp
learningprojs/ioexamples/: input.txt  output.txt  rdbufexample.cpp
learningprojs/lambdatrials/: example1.cpp  lambdacatpuredatamember.cpp  lambdaswiththiscapture.cpp  per_lambda_mutable_state.cpp
learningprojs/memerrors/: CMakeLists.txt  double_free.cpp  off_by_one_arrayacess.cpp  use_after_free.cpp
learningprojs/mikeshahchap1/: CMakeLists.txt  spritefight_ascii.ppm  spritefight_raw.ppm
learningprojs/specialmemberfunctions/: main  main.cpp
learningprojs/templatetypedeductionsample/: main.cpp  sample2.cpp
learningprojs/threads/: CMakeLists.txt  README.md  deadlock.cpp  (+10 more)
libraries/: CreateSharedLibWithClang.md  CreateSharedLibWithGcc.md
strings/: stdstring.md  strings.md
templates/: ClassTemplateArgumentDeduction.md  NonTypeTemplateParameters.md  README.md  TemplateParameters.md  VariadicTemplates.md  specialization.md  typeTraits.md
(+20 files in other folders)
